# prefetch

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
config/: prefetch.example.toml
crates/prefetch-cli/: Cargo.toml
crates/prefetch-cli/src/: gguf_provider.rs  main.rs
crates/prefetch-cli/src/commands/: analyze.rs  config.rs  discover.rs  mod.rs  status.rs  warm.rs
crates/prefetch-config/: Cargo.toml
crates/prefetch-config/src/: discovery.rs  lib.rs  paths.rs  settings.rs
crates/prefetch-core/: Cargo.toml
crates/prefetch-core/src/: cache_status.rs  lib.rs
crates/prefetch-core/src/platform/: linux.rs  macos.rs  mod.rs
crates/prefetch-core/src/prefetch/: engine.rs  mod.rs  progress.rs  strategy.rs
crates/prefetch-core/src/providers/: manifest.rs  mod.rs
crates/prefetch-daemon/: Cargo.toml
crates/prefetch-daemon/src/: lib.rs  security.rs
crates/prefetch-gguf/: Cargo.toml
crates/prefetch-gguf/src/: header.rs  layout.rs  lib.rs  metadata.rs  tensor_info.rs  types.rs
scripts/: install.sh  test.sh
service/: com.prefetch.plist  prefetch.service
