[package]
name = "prefetch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intelligent file prefetching with format-aware byte range ordering"

[[bin]]
name = "prefetch"
path = "src/main.rs"

[dependencies]
prefetch-core = { workspace = true }
prefetch-gguf = { workspace = true }
prefetch-config = { workspace = true }
prefetch-daemon = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
