[package]
name = "prefetch-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration management and Ollama model discovery"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
