[package]
name = "prefetch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core prefetch engine with platform-specific page cache warming"

[dependencies]
prefetch-gguf = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
